[project]
name = "brainvisa_toolbox"
version = "0.0.0"

dependencies = [
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brainvisa*"]

[tool.setuptools.package-data]
"*" = ["*.png"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://brainvisa.info/neuro-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
brainvisa_toolbox = { path = "." }

[tool.pixi.dependencies]
soma = "*"
soma-env = "0.0.*"
pip = "*"
matplotlib = ">=3.10.3,<4"
black = ">=25.1.0,<26"
anatomist = ">=0.0.16,<0.0.17"
capsul = ">=0.0.16,<0.0.17"
